fix:mainnav search breaks on mobile

--- a/Frontend/src/app/main/navigation/search-field/search-field.component.scss
+++ b/Frontend/src/app/main/navigation/search-field/search-field.component.scss
@@ -77,7 +77,7 @@ mat-form-field {
     flex: 1 0 0;
     display: flex;
     align-items: center;
-    min-width: 220px;
+    min-width: 120px;
     .filter-prefix {
         font-weight: bold;
         padding: 5px;
@@ -93,7 +93,6 @@ mat-form-field {
 
 .search-input {
     color: $workspaceTopBarInputText;
-    flex-grow: 1;
     -webkit-appearance: none; // Fix white background on Safari
     width: unset;
     min-width: 0;
@@ -113,6 +112,9 @@ mat-form-field {
     color: rgba($workspaceTopBarInputText, 0.8);
     &.cdk-keyboard-focused {
         @include setGlobalKeyboardFocus('border');
+    }
+    @media all and (max-width: ($mobileWidth - $mobileStage*3)) {
+        display: none;
     }
 }
 
